syntax="proto3";

option go_package = "./tensorflowGRPC";

service Communicator {
  // ask for new images to predict
  rpc RequestImages (Empty) returns (ImageArray) {}

  // exchange the prediction results
  rpc PostPredictions (PredictionArray) returns (Empty) {}

  // make prediction for an image immediately
  rpc ImmediatePred (Image) returns (Prediction) {}
}

message Empty {}

message Image {
  string name=1;
  string path=2;
}

message ImageArray {
  repeated Image Images=1;
}

message Prediction {
  string name=1;
  bool pred=2;  // true: vehicle; false: non-vehicle
}

message PredictionArray {
  repeated Prediction Predictions=1;
}

// cd to tensorflowGRPC directory; run the command below:
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative tf.proto